--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
 			</nav>
 
 			<div class="colorlib-footer">
-				<p><small><script>document.write(new Date().getFullYear());</script><i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank"></a>
+				<p><small><script>document.write(new Date().getFullYear());</script><i class="icon-heart" aria-hidden="true"></i> PARTH <a href="https://colorlib.com" target="_blank"></a>
  
 </span> <span><a href="https://unsplash.com/" target="_blank"></a></span></small></p> 
 				<ul>
+			
 					<li><a href="https://www.facebook.com/parth.nanda.37"><i class="icon-facebook2"></i></a></li>
 					<li><a href="https://twitter.com/parthnanda3?s=11"><i class="icon-twitter2"></i></a></li>
 					<li><a href="https://instagram.com/parth____99?"><i class="icon-instagram"></i></a></li>
@@ -132,6 +133,7 @@
 			  	</div>
 			</section>
 
+			<section class="colorlib-education" data-section="about">
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-12">
@@ -170,14 +172,11 @@
 									</div>
 								</div>
 							</div>
-							<!-- <div class="row">
-								<div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-									<div class="hire">
-										<h2>I am happy to know you <br>that 300+ projects done sucessfully!</h2>
-										<a href="#" class="btn-hire">Hire me</a>
-									</div>
-								</div>
-							</div> -->
+						</div>
+					</div>
+				</div>
+			</section>
+							
 						</div>
 					</div>
 				</div>
@@ -214,7 +213,7 @@
 				<div class="colorlib-narrow-content">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">About Me</span>
+							<span class="heading-meta"> Skills </span>
 							<h2 class="colorlib-heading animate-box">My Skills</h2>
 						</div>
 					</div>
